@@ -1089,6 +1089,10 @@ Symbol.prototype.toString = function() {
   return this.value;
 }
 
+Symbol.prototype.inspect = function() {
+  return this.value;
+}
+
 /**
  * DBRef constructor.
  *
